Fix spacing issues for both top and footer class

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+    height: 100vh;
     font-family: Roboto, sans-serif;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 h1,
@@ -31,12 +34,15 @@ a {
 
 .logo {
     font-size: 24px;
+    font-weight: 900;
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    gap: 10px;
 }
 
 a {
@@ -56,4 +62,48 @@ p {
     font-size: 36px;
     color: #1F2937;
     font-weight: 300;
+}
+
+.top,
+.info,
+.quote,
+.cta {
+    padding: 0 180px;
+}
+
+.top{
+    flex-grow: 1;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 0;
+}
+
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 0;
+}
+
+.hero .left {
+    width: 480px;
+}
+
+.placeholder {
+    background-color: #585757;
+    width: 480px;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
 }
